# reference-implementation

./: .gitignore  AUTHORS.md  CMakeLists.txt  Makefile  README.md  makefile
.github/workflows/: cmake.yml
api/: CMakeLists.txt
api/include/: tapp.h
api/include/tapp/: attributes.h  error.h  executor.h  handle.h  product.h  status.h  tensor.h  types.h
benchmark/: benchmark.c  benchmark.h
cmake/: tapp-config.cmake.in
ctf-bind/: ctf-bind.cpp  ctf-bind.h
cutensor_bindings/: CMakeLists.txt  cutensor_attributes.cu  cutensor_bind.h  cutensor_datatype.cu  cutensor_error.cu  cutensor_executor.cu  cutensor_handle.cu  cutensor_product.cu  cutensor_tensor.cu
cutensor_bindings/include/: attributes.h  datatype.h  error.h  executor.h  handle.h  product.h  tensor.h
cutensor_bindings/src/: attributes.cpp  attributes.cu  datatype.cpp  error.cpp  executor.cpp  handle.cpp  product.cpp  product.cu  tensor.cpp  tensor.cu
distributed/: cmake_conf_srun  conf_srun  debug_conf_srun  mpi_utils.h  worker.cxx
examples/: CMakeLists.txt  README.md
examples/driver/: driver.c
examples/exercise_contraction/: exercise_contraction.c
examples/exercise_contraction/answers/: exercise_contraction_answers.c
examples/exercise_tucker/: debug.c  exercise_tucker.c  exercise_tucker.h  exercise_tucker.py  exercise_tucker_numpy_v1.py  exercise_tucker_numpy_v2.py  exercise_tucker_tapp_v1.py  exercise_tucker_tapp_v2.py  exercise_tucker_tensorly.py  exercise_tucker_v2.py
examples/exercise_tucker/numpy_tucker/: exercise_tucker_numpy.py
examples/exercise_tucker/tapp_tucker/: exercise_tucker.c  exercise_tucker.h  exercise_tucker_tapp.py
examples/exercise_tucker/tapp_tucker/answers/: exercise_tucker_answers.c  exercise_tucker_answers.h  exercise_tucker_tapp_answers.py
include/: product.h
interface/tapp/: util.h
mapping/: einsum_map.py  tblis_map.cpp
multi-tapp/: CMakeLists.txt
multi-tapp/include/: attributes.h  error.h  executor.h  handle.h  product.h  status.h  tensor.h
multi-tapp/src/: attributes.c  error.c  executor.c  handle.c  product.c  status.c  tensor.c
np_einsum_wrapper/: np_einsum_wrapper.py  tapp_einsum.py
reference_implementation/: CMakeLists.txt
reference_implementation/include/: error.h  executor.h  handle.h  product.h  ref_imp.h  ref_impl.h  tensor.h
reference_implementation/src/: error.c  executor.c  handle.c  product.c  status.c  tensor.c
reference_implementation/tblis_bindings/: tblis_bind.cpp
src/: hi_tapp.h  product.c  product.h  tapp.h
src/hi_tapp/: attributes.h  datatype.h  error.c  error.h  executor.c  executor.h  handle.c  handle.h  product.c  product.h  space.cpp  space.h  status.h  tapp_ex_imp.h  tensor.c  tensor.h
src/tapp/: attributes.h  datatype.h  error.c  executor.c  executor.h  handle.c  handle.h  helpers.c  helpers.h  product.c  product.h  ref_imp.h  structs.h  tapp_ex_imp.h  tapp_ref_imp.h  tensor.c  tensor.h  transpose.c  transpose.h
tblis_bindings/: tblis_bind.cpp  tblis_bind.h
test/: CMakeLists.txt  cucontraction.cu  cudemo.cu  cutensor_demo.cpp  cutensor_demo.cu  demo.c  demo_dynamic.c  driver.c  exercise.c  helpers.c  helpers.h  multi-tapp-driver.c  test.c  test.cpp  test.h  test.py  test_dynamic.cpp  test_dynamic.h  uselib.c
test/consume/: CMakeLists.txt  smoke.c
